fix: bachground transition / overflow / footer alignment

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -25,6 +25,7 @@
 
     .text {
       display: flex;
+      align-items: center;
       gap: 0.5rem;
       padding: 0 0.5rem;
     }
