--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -13,9 +13,9 @@
     'footer footer footer';
   min-height: 100vh;
   color: $white;
-  background-color: $dark;
   transition: background-color 0.5s ease;
   padding: 0 2rem;
+  overflow-x: hidden;
 }
 
 @media all and (min-width: $mobile) {
@@ -27,6 +27,5 @@
 [data-theme='light'] {
   .app {
     color: $dark;
-    background-color: $lightwhite;
   }
 }
